--- a/index.html
+++ b/index.html
@@ -346,6 +346,6 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://unpkg.com/flowbite@1.4.1/dist/flowbite.js"></script>
 </body>
 </html>
