--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="bg-white border-gray-200 py-2.5 dark:bg-gray-900">
             <div class="flex flex-wrap items-center justify-between max-w-screen-xl px-4 mx-auto">
                 <a href="#" class="flex items-center">
-                    <img src="./images/logo_uni_inter.jpeg" class="h-12 mr-3 sm:h-16" alt="Universidad Inter Logo" />
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Universidad </br> Inter</span>
+                    <img src="./images/logo_uni_inter.png" class="h-12 mr-3 sm:h-16" alt="Universidad Inter Logo" />
+                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Universidad </br> Internacional</span>
                 </a>
                 <div class="flex items-center lg:order-2">
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
@@ -294,8 +294,8 @@
             <div class="grid grid-cols-2 gap-8">
                 <div>
                     <span class="flex items-center justify-end text-lg mt-10 sm:mt-0 sm:mb-5 sm:text-2xl font-semibold text-gray-900 dark:text-white">
-                        <img src="./images/logo_uni_inter.jpeg" class="h-20 mr-3 sm:h-44" alt="Universidad Inter Logo" />
-                        Universidad <br> Inter    
+                        <img src="./images/logo_uni_inter.png" class="h-20 mr-3 sm:h-44" alt="Universidad Inter Logo" />
+                        Universidad <br> Internacional    
                     </span>
                 </div>
                 
@@ -303,14 +303,14 @@
                     <ul class="text-gray-500 dark:text-gray-400">
                         <li class="mb-4">
                             <i class="fa-solid fa-phone"></i>
-                            <span>(021) 200 675</span>
+                            <span>(021) 222 637 - (0985) 879 999</span>
                         </li>                        
                         <li class="mb-4">
-                            <a href="mailto:info@inter.edu.py" class="hover:underline"> <i class="fa-solid fa-at"></i> info@inter.edu.py</a>
+                            <a href="mailto:info@inter.edu.py" class="hover:underline"> <i class="fa-solid fa-at"></i> universidad@inter.edu.py</a>
                         </li>
                         <li class="mb-4">
                             <i class="fa-solid fa-location-dot"></i>
-                            <span>Río de Janeiro y Mujer en la Conquista</span>
+                            <span>Río de Janeiro esq. Padre Saubatte</span>
                         </li>
                     </ul>
                 </div>
